# Roomba_project_cpp

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: Doxygen.yml  cmake.yml
Documentatie/Diagrammen/: Roomba Use Case diagram.puml  Roomba class diagram .puml  Roomba class diagram.drawio  Roomba state diagram.puml
Documentatie/DoxyGen/: Doxyfile
Documentatie/DoxyGen/DocPages/: Mainpage.md
Documentatie/DoxyGen/html/: _acceptatietesten_01_r_o_o_m_b_a_01_lib_8md.html  _change_baud__test_8cpp.html  _code__standaarden_8md.html  _eisen_01_r_o_o_m_b_a_01lib_8md.html  _example_tests_8cpp.html  _functies_01_r_o_o_m_b_a_01lib_8md.html  _mainpage_8md.html  _omgeving__opzetten_8md.html  _r_e_a_d_m_e_8md.html  _read_bytes__test_8cpp.html  _read_bytes__test_8cpp.js  _roomba_8cpp.html  _roomba_8hpp.html  _roomba_8hpp_source.html  _send_bytes__test_8cpp.html  _u_a_r_t-tmp-func_8inl.html  _u_a_r_t_8cpp.html  _u_a_r_t_8hpp.html  _u_a_r_t_8hpp.js  _u_a_r_t_8hpp_source.html  _u_a_r_t_defines_8hpp.html  _u_a_r_t_defines_8hpp_source.html  annotated.html  app_8cpp.html  class_roomba_1_1_roomba-members.html  class_roomba_1_1_roomba.html  class_u_a_r_t-members.html  class_u_a_r_t.html  class_u_a_r_t.js  class_u_a_r_t_1_1_u_a_r_t.html  classes.html  dir_1206050055b8940aab459171a9a6b007.html  dir_2ccfb2110537879bfa39ea5886c04321.html  dir_38b8f4cec442299a1dfa3aeb0bc58833.html  dir_439a6160eaffd674bc69e4f622d51458.html  dir_84c48df4180fff79c595b3f9535aee7b.html  dir_86854a288ee6a8e2c6fce8f94048abfc.html  dir_aebf11dbb21b5ead9a73356b1d016209.html  dir_aebf11dbb21b5ead9a73356b1d016209.js  dir_b28dcffc9db1dfa055d59da9b57bd8e6.html  (+47 more)
Documentatie/DoxyGen/latex/: _acceptatietesten_01_r_o_o_m_b_a_01_lib_8md.tex  _change_baud__test_8cpp.tex  _code__standaarden_8md.tex  _eisen_01_r_o_o_m_b_a_01lib_8md.tex  _example_tests_8cpp.tex  _functies_01_r_o_o_m_b_a_01lib_8md.tex  _mainpage_8md.tex  _omgeving__opzetten_8md.tex  _r_e_a_d_m_e_8md.tex  _read_bytes__test_8cpp.tex  _roomba_8cpp.tex  _roomba_8hpp.tex  _roomba_8hpp_source.tex  _send_bytes__test_8cpp.tex  _u_a_r_t-tmp-func_8inl.tex  _u_a_r_t_8cpp.tex  _u_a_r_t_8hpp.tex  _u_a_r_t_8hpp_source.tex  _u_a_r_t_defines_8hpp.tex  _u_a_r_t_defines_8hpp_source.tex  app_8cpp.tex  class_u_a_r_t.tex  class_u_a_r_t_1_1_u_a_r_t.tex  dir_1206050055b8940aab459171a9a6b007.tex  dir_2ccfb2110537879bfa39ea5886c04321.tex  dir_38b8f4cec442299a1dfa3aeb0bc58833.tex  dir_439a6160eaffd674bc69e4f622d51458.tex  files.tex  function_8hpp.tex  (+19 more)
Documentatie/MD/: Code_standaarden.md  Eisen ROOMBA lib.md  Omgeving_opzetten.md
Roomba/: .cproject  .gitignore  .project  CMakeLists.txt
Roomba/apps/: CMakeLists.txt  app.cpp
Roomba/include/IO/: IO.hpp
Roomba/include/LEDS/: LEDS.hpp
Roomba/include/Roomba/: Roomba.hpp
Roomba/include/UART/: UART-tmp-func.inl  UART.hpp  UARTBase.hpp
Roomba/include/UART/PC/: UART-tmp-func.inl  UARTPC.hpp
Roomba/include/crossplatform/: function.hpp
Roomba/src/: CMakeLists.txt
Roomba/src/IO/: CMakeLists.txt  IO.cpp
Roomba/src/IO/PC/: IO.cpp
Roomba/src/LEDS/: CMakeLists.txt  LEDS.cpp
Roomba/src/Roomba/: CMakeLists.txt  Roomba.cpp
Roomba/src/UART/: CMakeLists.txt  UART.cpp
Roomba/src/UART/PC/: UART.cpp
Roomba/tests/: CMakeLists.txt
Roomba/tests/UART_tests/: CMakeLists.txt  ChangeBaud_test.cpp  ReadBytes_test.cpp  SendBytes_test.cpp  UARTDefines.hpp  init_test.cpp
Roomba/tests/test/: ExampleTests.cpp
apps/: CMakeLists.txt  app.cpp
apps/examples/: CMakeLists.txt  SimpleController.cpp  SimpleWallDetector.cpp
docs/: Doxyfile  index.html  inline_umlgraph_cache_all.pu
docs/Diagrammen/: Roomba class diagram .puml
docs/DocPages/: 1_Eisen ROOMBA lib.md  3_Acceptatietesten ROOMBA Lib.md  4_Class diagram.md  4_Use_case_diagram.md  5_Class diagram.md  6_Bijdragen.md
docs/DoxyGen/: Doxyfile
docs/MD/: Acceptatietesten ROOMBA Lib.md  Code_standaarden.md  Functies ROOMBA lib.md  Omgeving_opzetten.md
docs/html/: 1.html  1_01_code__standaarden_8md.html  1___code__standaarden_8md.html  1___eisen_01_r_o_o_m_b_a_01lib_8md.html  2.html  2_01_class_01diagram_8md.html  2_01_eisen_01_r_o_o_m_b_a_01lib_8md.html  2___acceptatietesten_01_r_o_o_m_b_a_01_lib_8md.html  2___eisen_01_r_o_o_m_b_a_01lib_8md.html  3.html  3_01_acceptatietesten_01_r_o_o_m_b_a_01_lib_8md.html  3___acceptatietesten_01_r_o_o_m_b_a_01_lib_8md.html  4.html  4_01_functies_01_r_o_o_m_b_a_01lib_8md.html  4___class_01diagram_8md.html  4___use__case__diagram_8md.html  5.html  5_01_class_01diagram_8md.html  5___class_01diagram_8md.html  5___omgeving__opzetten_8md.html  6.html  6_01_omgeving__opzetten_8md.html  6___bijdragen_8md.html  _acceptatietesten_01_r_o_o_m_b_a_01_lib_8md.html  _c_o_d_e___o_f___c_o_n_d_u_c_t_8md.html  _change_baud__test_8cpp.html  _change_baud__test_8cpp__incl.map  _change_baud__test_8cpp__incl.md5  _class_01diagram_8md.html  _code__standaarden_8md.html  _control_mode_8cpp.html  _eisen_01_r_o_o_m_b_a_01lib_8md.html  _example_tests_8cpp.html  _example_tests_8cpp__incl.map  _example_tests_8cpp__incl.md5  _functies_01_r_o_o_m_b_a_01lib_8md.html  _i_o_8hpp.html  _i_o_8hpp__dep__incl.map  _i_o_8hpp__dep__incl.md5  _i_o_8hpp__incl.map  (+291 more)
docs/latex/: _functies_01_r_o_o_m_b_a_01lib_8md.tex  _omgeving__opzetten_8md.tex  _read_bytes__test_8cpp.tex  _u_a_r_t-tmp-func_8inl.tex  dir_2ccfb2110537879bfa39ea5886c04321.tex  dir_b28dcffc9db1dfa055d59da9b57bd8e6.tex  md__c___users_crtak__roomba_project_cpp__documentatie__m_d__acceptatietesten__r_o_o_m_b_a__lib.tex  md__doc_pages_mkdwnfile.tex  namespaces.tex  struct_u_a_r_t_settings.tex
html/: index.html  navtreedata.js
include/IO/: IO.hpp  IObase.hpp
include/Roomba/: Roomba.hpp
include/UART/: UARTBase.hpp
include/crossplatform/: function.hpp  sleep.hpp
src/IO/: CMakeLists.txt
src/Roomba/: CMakeLists.txt  ControlMode.cpp  Motor.cpp  Power.cpp  Roomba.cpp  Sensors.cpp
src/UART/PC/: CMakeLists.txt  UART.cpp
tests/: CMakeLists.txt
tests/UART_tests/: CMakeLists.txt  ChangeBaud_test.cpp  ReadBytes_test.cpp  SendBytes_test.cpp  UARTDefines.hpp  init_test.cpp
tests/test/: CMakeLists.txt
(+268 files in other folders)
